--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     };
     let current = 0;
     setInterval(() => {
-      if (current == 3){
+      if (current > 2){
         current = 0
       }
       drawCircle("green", 100, 100, current == 2);
